add: Light header and polygon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
 <html lang="en">
-
+    
+    <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +11,17 @@
 </head>
 
 <body>
-    <main class="pokedex" tabindex="0">
+    <main class="pokedex is-open" tabindex="0">
         <section class="pokedex-main">
+            <div class="header-shadow">
+                <div class="header">
+                    <span class="light l1"></span>
+                    <span class="light l2"></span>
+                    <span class="light l3"></span>
+                    <span class="light l4"></span>
+                </div>
+            </div>
+            <div>Hell</div>
         </section>
         <div class="cover-front" aria-label="Información general del pokemon">
             CFront
