add: Cover animated and polygon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
-    
-    <!DOCTYPE html>
+
+<!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,13 +22,22 @@
                     <span class="light l4"></span>
                 </div>
             </div>
-            <div>Hell</div>
+            <div class="screen">
+                <div class="frame">
+                    <div class="glass">
+
+                    </div>
+
+                </div>
+            </div>
         </section>
         <div class="cover-front" aria-label="Información general del pokemon">
             CFront
         </div>
         <section class="cover-back" aria-label="Estadiscitas del pokemon">
-            CBack
+            <div class="stats">
+                Stast
+            </div>
         </section>
     </main>
     </div>
