add: Screen pokedex

--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
                     <span class="light l4"></span>
                 </div>
             </div>
-            <div class="screen">
-                <div class="frame">
-                    <div class="glass">
-
-                    </div>
-
+            <div class="frame">
+                <div class="glass">
+                    Pokemon
                 </div>
+
             </div>
         </section>
         <div class="cover-front" aria-label="Información general del pokemon">
