add: Screen Buttons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                     Pokemon
                 </div>
 
+                <div class="detail">
+                    <div class="buttons">
+                        <span class="button"></span>
+                        <span class="button"></span>
+                    </div>
+                    <img src="./images/button.svg" class='btn_screen' alt="Screen Button">
+                </div>
             </div>
         </section>
         <div class="cover-front" aria-label="Información general del pokemon">
