--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <title>Pokedex</title>
@@ -33,6 +35,22 @@
                         <span class="button"></span>
                     </div>
                     <img src="./images/button.svg" class='btn_screen' alt="Screen Button">
+                </div>
+            </div>
+            <div class="actions">
+                <div class="variants">
+                    variants
+                </div>
+                <div class="search">
+                    <form role="search" id="form" class="search">
+                        <input type="text" name="id" placeholder="¿Quién es ese pokemon?" autocomplete="off">
+                    </form>
+                </div>
+                <div class="description">
+                    <p> Busca un pokemon para conocer sus caracteristicas</p>
+                </div>
+                <div class="navigation">
+                    navigation
                 </div>
             </div>
         </section>
