add: Navigation buttons

--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
                 <div class="variants">
                     variants
                 </div>
-                <div class="search">
                     <form role="search" id="form" class="search">
                         <input type="text" name="id" placeholder="¿Quién es ese pokemon?" autocomplete="off">
                     </form>
-                </div>
                 <div class="description">
                     <p> Busca un pokemon para conocer sus caracteristicas</p>
                 </div>
                 <div class="navigation">
-                    navigation
+                    <button class="navigation-right" aria-label="Siguiente Pokemon"></button>
+                    <button class="navigation-left" aria-label="Anterior Pokemon"></button>
+                    <button class="navigation-up" aria-label="Siguiente imagen Pokemon"></button>
+                    <button class="navigation-center" aria-label="Limpiar Pokemon"></button>
+                    <button class="navigation-down" aria-label="Anterior imagen Pokemon"></button>
                 </div>
             </div>
         </section>
