add: Variants buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
             </div>
             <div class="actions">
                 <div class="variants">
-                    variants
+                    <span class="BT_A"></span>
+                    <span class="BT_B">
+                        <button></button>
+                        <button></button>
+                    </span>
                 </div>
                     <form role="search" id="form" class="search">
                         <input type="text" name="id" placeholder="¿Quién es ese pokemon?" autocomplete="off">
