--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <section class="cover-back" aria-label="Estadiscitas del pokemon">
             <div class="stats">
-                Stast
+                Stats
             </div>
         </section>
     </main>
