--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="frame">
                 <div class="glass">
-                    Pokemon
+                    <img src="" alt="" id="image">
                 </div>
 
                 <div class="detail">
@@ -49,7 +49,7 @@
                         <input type="text" name="id" placeholder="¿Quién es ese pokemon?" autocomplete="off">
                     </form>
                 <div class="description">
-                    <p> Busca un pokemon para conocer sus caracteristicas</p>
+                    <p id="textContent"> Busca un pokemon para conocer sus caracteristicas</p>
                 </div>
                 <div class="navigation">
                     <button class="navigation-right" aria-label="Siguiente Pokemon"></button>
@@ -69,6 +69,8 @@
             </div>
         </section>
     </main>
+
+    <script type="module"  src="./javascript/index.js"></script>
     </div>
 </body>
 
