--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="frame">
-                <div class="glass">
+                <div class="glass" id="screen">
                     <img src="" alt="" id="image">
                 </div>
 
@@ -45,8 +45,10 @@
                         <button></button>
                     </span>
                 </div>
-                    <form role="search" id="form" class="search">
-                        <input type="text" name="id" placeholder="¿Quién es ese pokemon?" autocomplete="off">
+                    <form id="form" class="search">
+                        <input type="number" id="number" name="number" placeholder="#" autocomplete="off">
+                        <input type="text" id="name" name="name" placeholder="¿Quién es ese pokemon?" autocomplete="off">
+                        <input type="submit" style="display:none"/>
                     </form>
                 <div class="description">
                     <p id="textContent"> Busca un pokemon para conocer sus caracteristicas</p>
@@ -70,7 +72,7 @@
         </section>
     </main>
 
-    <script type="module"  src="./javascript/index.js"></script>
+    <script type="module"  src="/javascript/index.js"></script>
     </div>
 </body>
 
