fix: search in mobile

--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
                         <button></button>
                     </span>
                 </div>
-                    <form id="form" class="search">
+                <div class="search">
+                    <form id="form1">
                         <input type="number" id="number" name="number" placeholder="#" autocomplete="off">
-                        <input type="text" id="name" name="name" placeholder="¿Quién es ese pokemon?" autocomplete="off">
-                        <input type="submit" style="display:none"/>
                     </form>
+                    <form id="form2">
+                        <input type="text" id="name" name="name" placeholder="¿Quién es ese pokemon?" autocomplete="off">
+                    </form>
+                </div>
+
                 <div class="description">
                     <p id="textContent"> Busca un pokemon para conocer sus caracteristicas</p>
                 </div>
