fix: navigation buttons in ipad

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     <p id="textContent"> Busca un pokemon para conocer sus caracteristicas</p>
                 </div>
                 <div class="navigation">
-                    <button class="navigation-right" aria-label="Siguiente Pokemon"></button>
-                    <button class="navigation-left" aria-label="Anterior Pokemon"></button>
-                    <button class="navigation-up" aria-label="Siguiente imagen Pokemon"></button>
-                    <button class="navigation-center" aria-label="Limpiar Pokemon"></button>
-                    <button class="navigation-down" aria-label="Anterior imagen Pokemon"></button>
+                    <button id="navigationRight" class="navigation-right" aria-label="Siguiente Pokemon"></button>
+                    <button id="navigationLeft" class="navigation-left" aria-label="Anterior Pokemon"></button>
+                    <button id="navigationUp" class="navigation-up" aria-label="Siguiente imagen Pokemon"></button>
+                    <button id="navigationCenter" class="navigation-center" aria-label="Limpiar Pokemon"></button>
+                    <button id="navigationDown" class="navigation-down" aria-label="Anterior imagen Pokemon"></button>
                 </div>
             </div>
         </section>
