feat: Random pokemon function

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             </div>
             <div class="actions">
                 <div class="variants">
-                    <span class="BT_A"></span>
+                    <span class="BT_A">
+                        <span id="randomButton"></span>
+                    </span>
                     <span class="BT_B">
                         <button></button>
                         <button></button>
