feat: add speach to the description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="pokedex-main">
             <div class="header-shadow">
                 <div class="header">
-                    <span class="light l1"></span>
+                    <span class="light l1" id="light"></span>
                     <span class="light l2"></span>
                     <span class="light l3"></span>
                     <span class="light l4"></span>
