feat: chart of stats

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <div class="cover-front" aria-label="Información general del pokemon"> </div>
         <section class="cover-back" aria-label="Estadiscitas del pokemon">
             <div class="stats">
-                Stats
+                <canvas id="stats" width="200" height='200'></canvas>
             </div>
         </section>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
     <script type="module" src="/javascript/index.js"></script>
     </div>
 </body>
