--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Pokedex</title>
 </head>
 
@@ -34,7 +34,7 @@
                         <span class="button"></span>
                         <span class="button"></span>
                     </div>
-                    <img src="./images/button.svg" class='btn_screen' alt="Screen Button">
+                    <img src="/images/button.svg" class='btn_screen' alt="Screen Button">
                 </div>
             </div>
             <div class="actions">
