--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
-    <script type="module" src="/javascript/index.js"></script>
+    <script type="module" src="./javascript/index.js"></script>
     </div>
 </body>
 
