--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <span class="button"></span>
                         <span class="button"></span>
                     </div>
-                    <img src="/images/button.svg" class='btn_screen' alt="Screen Button">
+                    <img src="./images/button.svg" class='btn_screen' alt="Screen Button">
                 </div>
             </div>
             <div class="actions">
